# my_robot

./: .gitmodules  assembly.sh  imu_madgwick.sh  micro_ros_agent.sh  package.xml  udev_init.sh
src/: notes.txt
src/field2cover_ros2/: CMakeLists.txt  package.xml
src/field2cover_ros2/config/: field2cover.yaml  filed2cover.yaml
src/field2cover_ros2/data/: field.json  field.xml
src/field2cover_ros2/include/: Field2CoverNode.h  Fields2CoverConfig.h
src/field2cover_ros2/include/ros/: conversor.h
src/field2cover_ros2/src/: Field2CoverNode.cpp  main.cpp
src/nav2_goal_checker/: CMakeLists.txt  goal_checker_plugin.xml  package.xml
src/nav2_goal_checker/include/nav2_goal_checker/: RobotGoalChecker.h
src/nav2_goal_checker/src/: RobotGoalChecker.cpp
src/nav2_path_follower/: CMakeLists.txt  nav2_path_follower.xml  package.xml
src/nav2_path_follower/include/nav2_path_follower/: PurePursuitPathFollower.h
src/nav2_path_follower/src/: PurePursuitPathFollower.cpp
src/nav2_robot_field_planner/: CMakeLists.txt  field_planner_plugin.xml  package.xml
src/nav2_robot_field_planner/include/nav2_robot_field_planner/: FieldPlanner.h
src/nav2_robot_field_planner/src/: FieldPlanner.cpp
src/nav2_robot_path_planner/: CMakeLists.txt  Readme.txt  global_planner_plugin.xml  package.xml
src/nav2_robot_path_planner/include/nav2_robot_path_planner/: BotGlobalPlanner.h
src/nav2_robot_path_planner/src/: BotGlobalPlanner.cpp
src/nav2_robot_path_planner/src/robot_global_planner/: BotGlobalPlanner.cpp  BotGlobalPlanner.h
src/remapnode/: package.xml  setup.cfg  setup.py
src/remapnode/remapnode/: __init__.py  node.py
src/ros2_mpu9250_driver/src/: mpu9250driver.cpp
src/rules/: 99-imu-driver.rules  99-rplidar.rules  99-ublox-gnss.rules  99-ugv-driver.rules
src/rviz_reconfigure_plugin/: CMakeLists.txt  package.xml  rviz_plugin.xml
src/rviz_reconfigure_plugin/src/: NoHighlightDelegate.cpp  NoHighlightDelegate.h  NodeModel.cpp  NodeModel.h  ParametersModel.cpp  ParametersModel.h  PluginWidget.cpp  PluginWidget.h  PluginWidget.ui  RclEngine.cpp  RclEngine.h  RvizPluginPanel.cpp  RvizPluginPanel.h  tools.cpp  tools.h
src/tracked_robot/launch/: tracked_robot.launch.py
src/tracked_robot_bringup/: CMakeLists.txt  package.xml
src/tracked_robot_bringup/config/: ekf_with_gps.yaml  ekf_with_gps.yaml.back  laser_scan_filer.yaml
src/tracked_robot_bringup/launch/: description.launch.py  display.launch.py  field2cover.launch.py  gazebo.launch.py  imu_madgwick.sh  navigation.launch.py  navigation_rviz.launch.py  robot_10dof.launch.py  robot_state_publisher.launch.py  teleop.launch.py  test_hardware.launch.py  test_hardware.launch.pyh
src/tracked_robot_bringup/params/: filter_madgwick.yaml
src/tracked_robot_controls/: CMakeLists.txt  package.xml
src/tracked_robot_controls/include/Nodes/MineDetector/: MineDetector.h
src/tracked_robot_controls/include/Nodes/MinePositionHandler/: MinePositionHandler.h
src/tracked_robot_controls/src/Nodes/MineDetector/: MineDetector.cpp  main.cpp
src/tracked_robot_controls/src/Nodes/MinePositionHandler/: MinePositionHandler.cpp  main.cpp
src/tracked_robot_description/: CMakeLists.txt  package.xml
src/tracked_robot_description/launch/: description.launch.py  display.launch.py
src/tracked_robot_description/rviz/: urdf.rviz
src/tracked_robot_description/urdf/: bot.urdf.xacro  camera.urdf.xacro  gps.urdf.xacro  hand.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  track.urdf.xacro  tracked_robot.urdf.xml  tracked_robot_core.urdf.xacro  tracked_robot_hardware.urdf
src/tracked_robot_gazebo/: CMakeLists.txt  package.xml
src/tracked_robot_gazebo/launch/: gazebo.launch.py  robot_state_publisher.launch.py
src/tracked_robot_gazebo/urdf/: camera.gazebo.xacro  diff_drive.gazebo.xacro  diff_drive.urdf.xacro  gps.gazebo.xacro  gps.urdf.xacro  hand.gazebo.xacro  imu.gazebo.xacro  lidar.gazebo.xacro  lidar.urdf.xacro  tracked_robot.gazebo.xacro  tracked_robot.urdf.xacro
src/tracked_robot_hand_plugin/: CMakeLists.txt  package.xml
src/tracked_robot_hand_plugin/include/: HandPlugin.h
src/tracked_robot_hand_plugin/src/: HandPlugin.cpp
src/tracked_robot_hardware/: CMakeLists.txt  package.xml  tracked_robot_hardware.xml
src/tracked_robot_hardware/config/: ekf.yaml  ekf_old.yaml  ekf_with_gps.yaml
src/tracked_robot_hardware/controllers/: robot_controller.yaml
src/tracked_robot_hardware/include/tracked_robot_hardware/: Config.h  DiffDriveArduinoHardware.hpp  Wheel.h  (+2 more)
src/tracked_robot_hardware/scripts/: create_udev_rules.sh  delete_udev_rules.sh  ugv-driver.rules
src/tracked_robot_hardware/src/: .DiffDriveArduinoHardware.cpp.swp  DiffDriveArduinoHardware.cpp
src/tracked_robot_msgs/: CMakeLists.txt  package.xml
src/tracked_robot_msgs/msg/: HandPosition.msg
src/tracked_robot_msgs/srv/: FieldPlan.srv  UpdatePlan.srv
src/tracked_robot_navigation/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/tracked_robot_navigation/bt/: follow_path_behavior.xml  nav_through_poses.xml  nav_to_pose.xml
src/tracked_robot_navigation/config/: ekf.yaml
src/tracked_robot_navigation/include/MineLayer/: MineLayer.h
src/tracked_robot_navigation/launch/: navigation.launch.py  navigation_rviz.launch.py
src/tracked_robot_navigation/params/: nav2_params.yaml
src/tracked_robot_navigation/rviz/: nav2_config.rviz
src/tracked_robot_navigation/src/: MineLayer.cpp
src/tracked_robot_teleop/: CMakeLists.txt  package.xml
src/tracked_robot_teleop/config/: teleop_config.yaml
src/tracked_robot_teleop/include/tracked_robot_teleop/: JoystickHandler.hpp  TeleopHandler.hpp
src/tracked_robot_teleop/launch/: teleop.launch.py
src/tracked_robot_teleop/src/: JoystickHandler.cpp  TeleopHandler.cpp  main.cpp
src/tracked_robot_worlds/: CMakeLists.txt  package.xml
src/tracked_robot_worlds/maps/: empty.pgm  empty.yaml
src/tracked_robot_worlds/worlds/: empty.world  mines.world  my_world.world  obstacle.world
src/wit_ros2_imu/: setup.py
src/wit_ros2_imu/launch/: rviz_and_imu.launch.py
src/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py  wit_ros2_imu.py.buk
(+6 files in other folders)
