<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracked_robot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vitalii@todo.todo">vitalii</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tracked_robot_description</exec_depend>
  <exec_depend>tracked_robot_worlds</exec_depend>
  <exec_depend>tracked_robot_controls</exec_depend>
   
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
